- Added color snake in settings.

--- a/settings.html
+++ b/settings.html
@@ -83,36 +83,37 @@
                                                 <rect width="100%" height="100%" class="stroke-salmon"></rect>
                                             </svg>
                                         </div>
+
+                                        <h6>Snake Color:</h6>
+                                        <ul class="colors">
+                                            <li class="colors__item tooltip tooltip--bottom" data-tooltip="Blue">
+                                                <input name="color" id="colorBlue" type="radio" value="#10A9E7" checked="checked" /></input>
+                                                <label class="colors__itemColor" for="colorBlue">Blue</label>
+                                            </li>
+                                            <li class="colors__item tooltip tooltip--bottom" data-tooltip="Red">
+                                                <input name="color" id="colorRed" type="radio" value="#ff4d63" /></input>
+                                                <label class="colors__itemColor" for="colorRed">Red</label>
+                                            </li>
+                                            <li class="colors__item tooltip tooltip--bottom" data-tooltip="Green">
+                                                <input name="color" id="colorGreen" type="radio" value="#01D097" /></input>
+                                                <label class="colors__itemColor" for="colorGreen">Green</label>
+                                            </li>
+                                            <li class="colors__item tooltip tooltip--bottom" data-tooltip="Pink">
+                                                <input name="color" id="colorPink" type="radio" value="#DF1070" /></input>
+                                                <label class="colors__itemColor" for="colorPink">Pink</label>
+                                            </li>
+                                            <li class="colors__item tooltip tooltip--bottom" data-tooltip="Violet">
+                                                <input name="color" id="colorViolet" type="radio" value="#6F1EFB" /></input>
+                                                <label class="colors__itemColor" for="colorViolet">Violet</label>
+                                            </li>
+                                        </ul>
+
                                         <div class="form__fieldset form__fieldset--column">
-                                            <button class="button button--large button--medium button--yellow" type="submit">Save Changes</button>
+                                            <span class="mt--40">
+                                                <button class="button button--large button--medium button--yellow" type="submit">Save Changes</button>
+                                            </span>
                                         </div>
                                     </form>
-                                </div>
-
-                                <div class="cell-large-12 cell-medium-12 cell-small-12">
-                                    <h6 class="mt--80">Snake Color:</h6>
-                                    <ul class="colors">
-                                        <li class="colors__item">
-                                            <label class="colors__itemColor" for="colorBlue">Blue</label>
-                                            <input name="color" id="colorBlue" type="radio" value="#ff0" checked="checked" /></input>
-                                        </li>
-                                        <li class="colors__item">
-                                            <label class="colors__itemColor" for="colorRed">Red</label>
-                                            <input name="color" id="colorRed" type="radio" value="#f00" checked="checked" /></input>
-                                        </li>
-                                        <li class="colors__item">
-                                            <label class="colors__itemColor" for="colorGreen">Green</label>
-                                            <input name="color" id="colorGreen" type="radio" value="#f0f" checked="checked" /></input>
-                                        </li>
-                                        <li class="colors__item">
-                                            <label class="colors__itemColor" for="colorRed">Red</label>
-                                            <input name="color" id="colorRed" type="radio" value="#f00" checked="checked" /></input>
-                                        </li>
-                                        <li class="colors__item">
-                                            <label class="colors__itemColor" for="colorRed">Red</label>
-                                            <input name="color" id="colorRed" type="radio" value="#f00" checked="checked" /></input>
-                                        </li>
-                                    </ul>
                                 </div>
                             </div>
                         </div>
