- Fixed tooltip animation.

--- a/settings.html
+++ b/settings.html
@@ -86,30 +86,30 @@
 
                                         <h6>Snake Color:</h6>
                                         <ul class="colors">
-                                            <li class="colors__item tooltip tooltip--bottom" data-tooltip="Blue">
+                                            <li class="colors__item tooltip tooltip--top" data-tooltip="Blue">
                                                 <input name="color" id="colorBlue" type="radio" value="#10A9E7" checked="checked" /></input>
                                                 <label class="colors__itemColor" for="colorBlue">Blue</label>
                                             </li>
-                                            <li class="colors__item tooltip tooltip--bottom" data-tooltip="Red">
+                                            <li class="colors__item tooltip tooltip--top" data-tooltip="Red">
                                                 <input name="color" id="colorRed" type="radio" value="#ff4d63" /></input>
                                                 <label class="colors__itemColor" for="colorRed">Red</label>
                                             </li>
-                                            <li class="colors__item tooltip tooltip--bottom" data-tooltip="Green">
+                                            <li class="colors__item tooltip tooltip--top" data-tooltip="Green">
                                                 <input name="color" id="colorGreen" type="radio" value="#01D097" /></input>
                                                 <label class="colors__itemColor" for="colorGreen">Green</label>
                                             </li>
-                                            <li class="colors__item tooltip tooltip--bottom" data-tooltip="Pink">
+                                            <li class="colors__item tooltip tooltip--top" data-tooltip="Pink">
                                                 <input name="color" id="colorPink" type="radio" value="#DF1070" /></input>
                                                 <label class="colors__itemColor" for="colorPink">Pink</label>
                                             </li>
-                                            <li class="colors__item tooltip tooltip--bottom" data-tooltip="Violet">
+                                            <li class="colors__item tooltip tooltip--top" data-tooltip="Violet">
                                                 <input name="color" id="colorViolet" type="radio" value="#6F1EFB" /></input>
                                                 <label class="colors__itemColor" for="colorViolet">Violet</label>
                                             </li>
                                         </ul>
 
                                         <div class="form__fieldset form__fieldset--column">
-                                            <span class="mt--40">
+                                            <span class="mt--20">
                                                 <button class="button button--large button--medium button--yellow" type="submit">Save Changes</button>
                                             </span>
                                         </div>
