- Updated methods to add/get info in Firebase.

--- a/rating.html
+++ b/rating.html
@@ -110,6 +110,7 @@
     </footer>
 
     <!-- JAVASCRIPT -->
+    <script src="https://www.gstatic.com/firebasejs/4.6.0/firebase.js"></script>
     <script type="text/javascript" src="public/ts/rating.js"></script>
 </body>
 </html>
