--- a/friends.html
+++ b/friends.html
@@ -69,6 +69,7 @@
     </footer>
 
     <!-- JAVASCRIPT -->
+    <script src="https://www.gstatic.com/firebasejs/4.6.0/firebase.js"></script>
     <script type="text/javascript" src="public/ts/friend.js"></script>
 </body>
 </html>
