--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     </footer>
 
     <!-- JAVASCRIPT -->
+    <script src="https://www.gstatic.com/firebasejs/4.6.0/firebase.js"></script>
     <script type="text/javascript" src="public/ts/auth.js"></script>
 </body>
 </html>
