--- a/rating.html
+++ b/rating.html
@@ -46,7 +46,7 @@
                     <li class="nav__item nav__item--active"><a href="./rating.html" class="nav__itemLink">Rating</a></li>
                     <li class="nav__item"><a href="./friends.html" class="nav__itemLink">Friends</a></li>
                     <li class="nav__item"><a href="./settings.html" class="nav__itemLink">Settings</a></li>
-                    <li class="nav__item"><a href="./index.html" class="nav__itemLink">Logout</a></li>
+                    <li class="nav__item"><a href="./index.html" id="logout" class="nav__itemLink">Logout</a></li>
                 </ul>
             </nav>
         </div>
