- Updated login using Firebase.

--- a/rating.html
+++ b/rating.html
@@ -85,18 +85,7 @@
                     <div class="card__content">
                         <div class="card__contentInfo">
                             <table class="table">
-                                <tbody>
-                                    <tr>
-                                        <td class="table__image">
-                                            <img src="https://pbs.twimg.com/profile_images/754886061872979968/BzaOWhs1_400x400.jpg"
-                                            alt="Mark Dalgleish"
-                                            title="Mark Dalgleish">
-                                        </td>
-                                        <td class="table_name">Mark Dalgleish</td>
-                                        <td class="table__scrore">1000 /pts</td>
-                                        <td class="table__stars">★★★★</td>
-                                    </tr>
-                                </tbody>
+                                <tbody></tbody>
                             </table>
                         </div>
                     </div>
