--- a/settings.html
+++ b/settings.html
@@ -128,6 +128,7 @@
     </footer>
 
     <!-- JAVASCRIPT -->
+    <script src="https://www.gstatic.com/firebasejs/4.6.0/firebase.js"></script>
     <script type="text/javascript" src="public/ts/setting.js"></script>
 </body>
 </html>
