- Updated settings to only change the email if not exists in Players list.

--- a/settings.html
+++ b/settings.html
@@ -78,7 +78,7 @@
                                         </div>
                                         <div class="form__fieldset form__fieldset--column">
                                             <label for="inputEmail">Email:</label>
-                                            <input type="email" id="inputEmail" name="playerEmail" placeholder="john.doe@mail.eu" disabled="disabled">
+                                            <input type="email" id="inputEmail" name="playerEmail" placeholder="john.doe@mail.eu">
                                             <svg>
                                                 <rect width="100%" height="100%" class="stroke-salmon"></rect>
                                             </svg>
