- Updated settings to remove permission to edit email.

--- a/settings.html
+++ b/settings.html
@@ -60,25 +60,25 @@
                         <div class="card__contentInfo">
                             <div class="row">
                                 <div class="cell-large-4 cell-medium-4 cell-small-12">
-                                    <img src="http://www.gravatar.com/avatar/a1d43ce0a6092c59b8d96bd47a3aae03.jpg?s=220"
-                                    id="photoProfile"
-                                    class="photo"
-                                    alt="Name"
-                                    title="Name">
+                                    <img src=""
+                                        id="photoProfile"
+                                        class="photo"
+                                        alt=""
+                                        title="">
                                 </div>
                                 <div class="cell-large-8 cell-medium-8 cell-small-12">
                                     <h6>Profile Settings:</h6>
                                     <form class="form">
                                         <div class="form__fieldset form__fieldset--column">
                                             <label for="inputName">Nickname:</label>
-                                            <input type="text" id="inputName" name="playerName" placeholder="John Doe">
+                                            <input type="text" id="inputName" name="playerName" placeholder="John Doe" required="required" />
                                             <svg>
                                                 <rect width="100%" height="100%" class="stroke-salmon"></rect>
                                             </svg>
                                         </div>
                                         <div class="form__fieldset form__fieldset--column">
                                             <label for="inputEmail">Email:</label>
-                                            <input type="email" id="inputEmail" name="playerEmail" placeholder="john.doe@mail.eu">
+                                            <input type="email" id="inputEmail" name="playerEmail" placeholder="john.doe@mail.eu" disabled="disabled" required="required"/>
                                             <svg>
                                                 <rect width="100%" height="100%" class="stroke-salmon"></rect>
                                             </svg>
