- Updated list of players.

--- a/friends.html
+++ b/friends.html
@@ -56,8 +56,75 @@
         <section class="gird">
             <div class="container">
                 <div class="row">
-                    <div class="cell-large-12 cell-medium-12 cell-small-12">
-                        <h1>Coming Soon!</h1>
+                                        <div class="cell-large-4 cell-medium-4 cell-small-12">
+                        <div class="item">
+                            <div class="item__photo">
+                                <img src="https://pbs.twimg.com/profile_images/771352999541272576/iVfXX7Ns_400x400.jpg" alt="" title="">
+                            </div>
+                            <div class="item__name">
+                                Bruna M. Santos
+                            </div>
+                        </div>
+                    </div>
+                                        <div class="cell-large-4 cell-medium-4 cell-small-12">
+                        <div class="item">
+                            <div class="item__photo">
+                                <img src="https://pbs.twimg.com/profile_images/771352999541272576/iVfXX7Ns_400x400.jpg" alt="" title="">
+                            </div>
+                            <div class="item__name">
+                                Bruna M. Santos
+                            </div>
+                        </div>
+                    </div>
+                                        <div class="cell-large-4 cell-medium-4 cell-small-12">
+                        <div class="item">
+                            <div class="item__photo">
+                                <img src="https://pbs.twimg.com/profile_images/771352999541272576/iVfXX7Ns_400x400.jpg" alt="" title="">
+                            </div>
+                            <div class="item__name">
+                                Bruna M. Santos
+                            </div>
+                        </div>
+                    </div>
+                                        <div class="cell-large-4 cell-medium-4 cell-small-12">
+                        <div class="item">
+                            <div class="item__photo">
+                                <img src="https://pbs.twimg.com/profile_images/771352999541272576/iVfXX7Ns_400x400.jpg" alt="" title="">
+                            </div>
+                            <div class="item__name">
+                                Bruna M. Santos
+                            </div>
+                        </div>
+                    </div>
+                                        <div class="cell-large-4 cell-medium-4 cell-small-12">
+                        <div class="item">
+                            <div class="item__photo">
+                                <img src="https://pbs.twimg.com/profile_images/771352999541272576/iVfXX7Ns_400x400.jpg" alt="" title="">
+                            </div>
+                            <div class="item__name">
+                                Bruna M. Santos
+                            </div>
+                        </div>
+                    </div>
+                                        <div class="cell-large-4 cell-medium-4 cell-small-12">
+                        <div class="item">
+                            <div class="item__photo">
+                                <img src="https://pbs.twimg.com/profile_images/771352999541272576/iVfXX7Ns_400x400.jpg" alt="" title="">
+                            </div>
+                            <div class="item__name">
+                                Bruna M. Santos
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cell-large-4 cell-medium-4 cell-small-12">
+                        <div class="item">
+                            <div class="item__photo">
+                                <img src="https://pbs.twimg.com/profile_images/771352999541272576/iVfXX7Ns_400x400.jpg" alt="" title="">
+                            </div>
+                            <div class="item__name">
+                                Bruna M. Santos
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
