--- a/rating.html
+++ b/rating.html
@@ -55,36 +55,10 @@
     <main class="main" role="main">
         <section class="gird">
             <div class="container">
-                <div class="card card--medium card--center">
-                    <div class="card__content card__content">
-                        <div class="card__contentInfo">
-                            <div class="row">
-                                <div class="cell-large-3 cell-medium-3 cell-small-12">
-                                    <div class="photo">
-                                        <img src="https://pbs.twimg.com/profile_images/771352999541272576/iVfXX7Ns_400x400.jpg"
-                                            alt="Bruna M. Santos"
-                                            title="Bruna M. Santos">
-                                    </div>
-                                    <span class="stars">★★★★★</span>
-                                </div>
-                                <div class="cell-large-7 cell-medium-7 cell-small-12">
-                                    <div class="details">
-                                        <span class="details__position">#1</span>
-                                        <span class="details__name">Bruna M. Santos</span>
-                                        <span class="details__scrore">(3400 /pts)</span>
-                                    </div>
-                                </div>
-                                <div class="cell-large-2 cell-medium-2 cell-small-12">
-                                    <span class="winner">🥇</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 <div class="card card--large card--center mb--0">
                     <div class="card__content">
                         <div class="card__contentInfo">
-                            <table class="table">
+                            <table class="table loading">
                                 <tbody></tbody>
                             </table>
                         </div>
