--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
                             <form class="form">
                                 <div class="form__fieldset form__fieldset--column">
                                     <label for="inputName">Nickname:</label>
-                                    <input type="text" id="inputName" name="name" placeholder="John Doe" required="required">
+                                    <input type="text" id="inputName" name="name" placeholder="John Doe" />
                                     <svg>
                                         <rect width="100%" height="100%" class="stroke-salmon"></rect>
                                     </svg>
                                 </div>
                                 <div class="form__fieldset form__fieldset--column">
                                     <label for="inputEmail">Email:</label>
-                                    <input type="email" id="inputEmail" name="email" placeholder="john.doe@mail.eu" required="required">
+                                    <input type="email" id="inputEmail" name="email" placeholder="john.doe@mail.eu" required="required" />
                                     <svg>
                                         <rect width="100%" height="100%" class="stroke-salmon"></rect>
                                     </svg>
