--- a/rating.html
+++ b/rating.html
@@ -58,7 +58,12 @@
                 <div class="card card--large card--center mb--0">
                     <div class="card__content">
                         <div class="card__contentInfo">
-                            <table class="table loading">
+                            <div id="loading" class="loading--on">
+                                <svg x="0px" y="0px" viewBox="0 0 150 150">
+                                    <circle id="loading-inner" cx="75" cy="75" r="60"/>
+                                </svg>
+                            </div>
+                            <table class="table">
                                 <tbody></tbody>
                             </table>
                         </div>
