- Added friends view.

--- a/friends.html
+++ b/friends.html
@@ -29,6 +29,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Raleway:300,600,700" rel="stylesheet">
 
     <!-- STYLES -->
+    <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="public/css/app.css">
 </head>
 
@@ -59,70 +60,17 @@
                     <div class="cell-large-4 cell-medium-4 cell-small-12">
                         <div class="item">
                             <div class="item__photo">
+                                <span style="color: #6F1EFB"></span>
                                 <img src="https://pbs.twimg.com/profile_images/771352999541272576/iVfXX7Ns_400x400.jpg" alt="" title="">
                             </div>
-                            <div class="item__name">
-                                Bruna M. Santos
+                            <div class="item__content">
+                                <div class="item__name">Bruna M. Santos</div>
+                                <div class="item__mail">brrunaa.91@gmail.com</div>
+                                <div class="item__history"><strong>Last Login:</strong> 10 June 2017 </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="cell-large-4 cell-medium-4 cell-small-12">
-                        <div class="item">
-                            <div class="item__photo">
-                                <img src="https://pbs.twimg.com/profile_images/771352999541272576/iVfXX7Ns_400x400.jpg" alt="" title="">
-                            </div>
-                            <div class="item__name">
-                                Bruna M. Santos
-                            </div>
-                        </div>
-                    </div>
-                    <div class="cell-large-4 cell-medium-4 cell-small-12">
-                        <div class="item">
-                            <div class="item__photo">
-                                <img src="https://pbs.twimg.com/profile_images/771352999541272576/iVfXX7Ns_400x400.jpg" alt="" title="">
-                            </div>
-                            <div class="item__name">
-                                Bruna M. Santos
-                            </div>
-                        </div>
-                    </div>
-                    <div class="cell-large-4 cell-medium-4 cell-small-12">
-                        <div class="item">
-                            <div class="item__photo">
-                                <img src="https://pbs.twimg.com/profile_images/771352999541272576/iVfXX7Ns_400x400.jpg" alt="" title="">
-                            </div>
-                            <div class="item__name">
-                                Bruna M. Santos
-                            </div>
-                        </div>
-                    </div>
-                    <div class="cell-large-4 cell-medium-4 cell-small-12">
-                        <div class="item">
-                            <div class="item__photo">
-                                <img src="https://pbs.twimg.com/profile_images/771352999541272576/iVfXX7Ns_400x400.jpg" alt="" title="">
-                            </div>
-                            <div class="item__name">
-                                Bruna M. Santos
-                            </div>
-                        </div>
-                    </div>
-                    <div class="cell-large-4 cell-medium-4 cell-small-12">
-                        <div class="item">
-                            <div class="item__photo">
-                                <img src="https://pbs.twimg.com/profile_images/771352999541272576/iVfXX7Ns_400x400.jpg" alt="" title="">
-                            </div>
-                            <div class="item__name">
-                                Bruna M. Santos
-                            </div>
-                        </div>
-                    </div>
-                    <div class="cell-large-4 cell-medium-4 cell-small-12">
-                        <div class="item">
-                            <div class="item__photo">
-                                <img src="https://pbs.twimg.com/profile_images/771352999541272576/iVfXX7Ns_400x400.jpg" alt="" title="">
-                            </div>
-                            <div class="item__name">
-                                Bruna M. Santos
+                            <div class="item__options">
+                                <button class="button button--small button--yellow" disabled><i class="icon ion-ios-game-controller-b"></i> Challenge</button>
+                                <button class="button button--small button--yellow" disabled><i class="icon ion-android-mail"></i> Message</button>
                             </div>
                         </div>
                     </div>
