--- a/rating.html
+++ b/rating.html
@@ -29,6 +29,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Raleway:300,600,700" rel="stylesheet">
 
     <!-- STYLES -->
+    <link href="public/vendor/ionicons-2.0.1/css/ionicons.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="public/css/app.css">
 </head>
 
@@ -36,9 +37,7 @@
     <header class="header">
         <div class="content">
             <div class="header__logo">
-                <img src="./public/images/logo/snake_invert.svg"
-                alt="Snake Battle"
-                title="Snake Battle" class="header__logoImage">
+                <img src="./public/images/logo/snake_invert.svg" alt="Snake Battle" title="Snake Battle" class="header__logoImage">
             </div>
             <nav class="header__nav">
                 <ul class="nav nav--right">
