--- a/settings.html
+++ b/settings.html
@@ -29,7 +29,9 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Raleway:300,600,700" rel="stylesheet">
 
     <!-- STYLES -->
+    <link href="assets/vendor/ionicons-2.0.1/css/ionicons.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="dist/css/app.css">
+
 </head>
 
 <body class="profile">
