--- a/friends.html
+++ b/friends.html
@@ -70,10 +70,10 @@
     </footer>
 
     <!-- JAVASCRIPT -->
-    <script src="./node_modules/react/umd/react.development.js"></script>
-    <script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
+    <script src="node_modules/react/umd/react.development.js"></script>
+    <script src="node_modules/react-dom/umd/react-dom.development.js"></script>
 
-    <script type="text/javascript" src="./dist/js/friend.js"></script>
+    <script type="text/javascript" src="dist/js/friend.js"></script>
 
 </body>
 </html>
