- Updated settings path.

--- a/settings.html
+++ b/settings.html
@@ -128,8 +128,8 @@
     </footer>
 
     <!-- JAVASCRIPT -->
-    <script src="./node_modules/react/umd/react.development.js"></script>
-    <script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
+    <script src="node_modules/react/umd/react.development.js"></script>
+    <script src="node_modules/react-dom/umd/react-dom.development.js"></script>
 
     <script type="text/javascript" src="dist/js/setting.js"></script>
 </body>
