--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
     </footer>
 
     <!-- JAVASCRIPT -->
+    <script src="dist/react.development.js"></script>
+    <script src="dist/react-dom.development.js"></script>
     <script type="text/javascript" src="./dist/js/auth.js"></script>
 </body>
 </html>
