--- a/rating.html
+++ b/rating.html
@@ -77,7 +77,8 @@
     </footer>
 
     <!-- JAVASCRIPT -->
-    <script src="https://www.gstatic.com/firebasejs/4.6.0/firebase.js"></script>
+    <script src="dist/react.development.js"></script>
+    <script src="dist/react-dom.development.js"></script>
     <script type="text/javascript" src="dist/js/rating.js"></script>
 </body>
 </html>
