- Updated component to list rating using React.

--- a/rating.html
+++ b/rating.html
@@ -57,14 +57,13 @@
                 <div class="card card--large card--center mb--0">
                     <div class="card__content">
                         <div class="card__contentInfo">
-                            <div id="loading" class="loading--on">
-                                <svg x="0px" y="0px" viewBox="0 0 150 150">
-                                    <circle id="loading-inner" cx="75" cy="75" r="60"/>
-                                </svg>
+                            <div id="list-players">
+                                <div id="loading" class="loading--on">
+                                    <svg x="0px" y="0px" viewBox="0 0 150 150">
+                                        <circle id="loading-inner" cx="75" cy="75" r="60"/>
+                                    </svg>
+                                </div>
                             </div>
-                            <table class="table">
-                                <tbody></tbody>
-                            </table>
                         </div>
                     </div>
                 </div>
@@ -79,6 +78,7 @@
     <!-- JAVASCRIPT -->
     <script src="dist/react.development.js"></script>
     <script src="dist/react-dom.development.js"></script>
+
     <script type="text/javascript" src="dist/js/rating.js"></script>
 </body>
 </html>
