- Added React component for Board.

--- a/game.html
+++ b/game.html
@@ -60,7 +60,7 @@
 
     <!-- MAIN -->
     <main class="main" role="main">
-        <game-board></game-board>
+        <div id="board"></div>
     </main>
 
     <!-- ASIDE -->
