--- a/game.html
+++ b/game.html
@@ -76,8 +76,8 @@
     </footer>
 
     <!-- JAVASCRIPT -->
-    <script src="./node_modules/react/umd/react.development.js"></script>
-    <script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
+    <script src="dist/react.development.js"></script>
+    <script src="dist/react-dom.development.js"></script>
 
     <script type="text/javascript" src="dist/js/game.js"></script>
 </body>
