--- a/rating.html
+++ b/rating.html
@@ -37,15 +37,15 @@
     <header class="header">
         <div class="content">
             <div class="header__logo">
-                <img src="./assets/images/logo/snake_invert.svg" alt="Snake Battle" title="Snake Battle" class="header__logoImage">
+                <img src="./assets/images/logo/snake_invert.svg" alt="Snake Battle" title="Snake Battle" class="header__logo-image">
             </div>
             <nav class="header__nav">
                 <ul class="nav nav--right">
-                    <li class="nav__item "><a href="./game.html" class="nav__itemLink">Game</a></li>
-                    <li class="nav__item nav__item--active"><a href="./rating.html" class="nav__itemLink">Rating</a></li>
-                    <li class="nav__item"><a href="./friends.html" class="nav__itemLink">Friends</a></li>
-                    <li class="nav__item"><a href="./settings.html" class="nav__itemLink">Settings</a></li>
-                    <li class="nav__item"><a href="./index.html" id="logout" class="nav__itemLink">Logout</a></li>
+                    <li class="nav__item "><a href="./game.html" class="nav__item-link">Game</a></li>
+                    <li class="nav__item nav__item--active"><a href="./rating.html" class="nav__item-link">Rating</a></li>
+                    <li class="nav__item"><a href="./friends.html" class="nav__item-link">Friends</a></li>
+                    <li class="nav__item"><a href="./settings.html" class="nav__item-link">Settings</a></li>
+                    <li class="nav__item"><a href="./index.html" id="logout" class="nav__item-link">Logout</a></li>
                 </ul>
             </nav>
         </div>
