--- a/game.html
+++ b/game.html
@@ -53,9 +53,9 @@
 
     <!-- SIDEBAR -->
     <div class="sidebar">
-        <div class="sidebar__item">Score : <score>0</score></div>
-        <div class="sidebar__item">Time : <time>0s</time></div>
-        <div class="sidebar__item">Speed : <speed>0</speed></div>
+        <div class="sidebar__item">Score<score>0</score></div>
+        <div class="sidebar__item">Time<time>0s</time></div>
+        <div class="sidebar__item">Speed<speed>0</speed></div>
     </div>
 
     <!-- MAIN -->
@@ -65,9 +65,8 @@
 
     <!-- ASIDE -->
     <aside class="aside">
-        <div class="aside__item">Score : <score>0</score></div>
-        <div class="aside__item">Time : <time>0s</time></div>
-        <div class="aside__item">Speed : <speed>0</speed></div>
+        <div class="aside__item aside__item--icon">😀</div>
+        <div class="aside__item">Nice Job!</div>
     </aside>
 
     <!-- FOOTER -->
