- Added level and fruit in view.

--- a/game.html
+++ b/game.html
@@ -65,8 +65,9 @@
 
     <!-- ASIDE -->
     <aside class="aside">
-        <div class="aside__item aside__item--icon">😀</div>
-        <div class="aside__item">Nice Job!</div>
+        <div class="aside__item aside__item--level">Level <level>1</level></div>
+        <div class="aside__item aside__item--icon"><fruit>🍓</fruit></div>
+        <div class="aside__item aside__item--time">10</div>
     </aside>
 
     <!-- FOOTER -->
